[package]
name = "wkhtmltopdf-lambda"
version = "0.1.0"
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
lambda_runtime = "0.2.1"
once_cell = "1.5.2"
rusoto_core = { version = "0.45.0", default-features = false, features = [
    "rustls"
] }
rusoto_s3 = { version = "0.45.0", default-features = false, features = [
    "rustls"
] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
slog = "2.5.2"
slog-term = "2.6.0"
strum = "0.19.5"
strum_macros = "0.19.4"
tempfile = "3.1.0"
tokio = "0.2.23"
