[package]
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2018"
name = "wkhtmltopdf-lambda"
version = "0.1.0"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
lambda_runtime = "0.2.1"
once_cell = "1.5.2"
serde_json = "1.0.59"
slog = "2.5.2"
slog-bunyan = "2.2.0"
strum = "0.19.5"
strum_macros = "0.19.4"
tempfile = "3.1.0"
tokio = "0.2.23"

[dependencies.rusoto_core]
default-features = false
features = ["rustls"]
version = "0.45.0"

[dependencies.rusoto_s3]
default-features = false
features = ["rustls"]
version = "0.45.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"
